Enable increased timeout. Add python 3.10 both for build and test

--- a/.github/workflows/fbgemm_gpu_ci_rocm.yml
+++ b/.github/workflows/fbgemm_gpu_ci_rocm.yml
@@ -64,7 +64,7 @@ jobs:
           { arch: x86, instance: "gfx90a" },
         ]
         container-image: [ "ubuntu:20.04" ]
-        python-version: [ "3.12" ]
+        python-version: [ "3.10", "3.12" ]
         rocm-version: [ "6.1" ]
         compiler: [ "gcc", "clang" ]
 
@@ -144,7 +144,7 @@ jobs:
           { arch: x86, instance: "gfx90a" },
         ]
         # ROCm machines are limited, so we only test a subset of Python versions
-        python-version: [ "3.12" ]
+        python-version: [ "3.10", "3.12" ]
         rocm-version: [ "6.1" ]
         compiler: [ "gcc", "clang" ]
     needs: build_artifact
@@ -196,5 +196,5 @@ jobs:
       run: . $PRELUDE; install_fbgemm_gpu_wheel $BUILD_ENV *.whl
 
     - name: Test with PyTest
-      # timeout-minutes: 60
+      timeout-minutes: 60
       run: . $PRELUDE; test_all_fbgemm_gpu_modules $BUILD_ENV
